// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render in checked state 1`] = `
<label
  class="radio dark"
>
  <span
    class="customRadioContainer"
  >
    <input
      checked=""
      type="radio"
    />
    <span
      class="customRadio"
    />
  </span>
  <span
    class="labelText"
  >
    My radio
  </span>
</label>
`;

exports[`The component should render in unchecked state 1`] = `
<label
  class="radio dark"
>
  <span
    class="customRadioContainer"
  >
    <input
      type="radio"
    />
    <span
      class="customRadio"
    />
  </span>
  <span
    class="labelText"
  >
    My radio
  </span>
</label>
`;

exports[`The component should render without children 1`] = `
<label
  class="radio dark"
>
  <span
    class="customRadioContainer"
  >
    <input
      checked=""
      type="radio"
    />
    <span
      class="customRadio"
    />
  </span>
</label>
`;
